@@ -32,11 +32,11 @@
 
 <p>
 Element pool is a domain, where objects of different types can be created and stored. There is a restriction:
-the object type must have a trivial destructor. All objects in a pool dies together when the element pool is destroyed. 
+the object type must have a trivial destructor. All objects in the pool dies together when the element pool is destroyed. 
 </p>
 
 <p>
-Element pool is required when you want to create a bunch of objects dynamically and then finish they life-time
+Element pool is required when you want to create a bunch of objects dynamically and then to finish their life-time
 simultaneously. Element pool can speed up this process, because its allocation function is faster and
 you don't have to track objects to destroy them. Destruction process is also cheap: it's just a few 
 memory blocks release. 
@@ -49,6 +49,7 @@ memory blocks release.
 <h4>ElementPool</h4>
 
 <pre>
+
 class <span class="Att">ElementPool</span> : NoCopy
  {
    MemPool pool;
@@ -69,6 +70,11 @@ class <span class="Att">ElementPool</span> : NoCopy
    
    StrLen dup(StrLen str);
    
+   template &lt;class ... TT&gt;
+   StrLen cat(TT ... tt);
+   
+   void shrink_extra();
+
    // createArray
    
    template &lt;class T&gt;
@@ -100,6 +106,7 @@ class <span class="Att">ElementPool</span> : NoCopy
 
    ElementPool * objMove(Place&lt;void&gt; place);
  };
+
 </pre>
 
 <p>
@@ -113,6 +120,15 @@ to it. On failure an exception is thrown. Arguments are forwarded to the <b>T</b
 
 <p>
 The method <b>dup()</b> duplicates the given string in the pool and returns the duplicate.
+</p>
+
+<p>
+<b>cat()</b> casts the given arguments to the type <b>StrLen</b> and makes a string in the pool 
+by the concatenation of the received strings. 
+</p>
+
+<p>
+<b>shrink_extra()</b> releases the reserved memory at the pool tail.
 </p>
 
 <p>
@@ -166,6 +182,7 @@ arguments.
 <h4>MemPool</h4>
 
 <pre>
+
 class <span class="Att">MemPool</span> : NoCopy
  {
   public:
@@ -182,6 +199,8 @@ class <span class="Att">MemPool</span> : NoCopy
    
    Place&lt;void&gt; alloc(ulen len);
    
+   void shrink_extra();
+
    // swap/move objects
    
    void objSwap(MemPool &amp;obj);
@@ -190,6 +209,7 @@ class <span class="Att">MemPool</span> : NoCopy
 
    MemPool * objMove(Place&lt;void&gt; place);
  };
+
 </pre>
 
 <p>
@@ -205,7 +225,11 @@ Blocks are always aligned. On failure an exception is thrown.
 
 <p>
 <b>MemPool</b> constructor accepts two arguments: <b>block_len</b> is an internal large blocks length,
-64 KBytes by default, <b>mem_cap</b> is a total memory allocation cap, no cap by default.
+<b>64 KBytes</b> by default, <b>mem_cap</b> is a total memory allocation cap, no cap by default.
+</p>
+
+<p>
+<b>shrink_extra()</b> releases the reserved memory at the pool tail.
 </p>
 
 <p>
